--- a/overlay/frameworks/base/core/res/res/values/dimens.xml
+++ b/overlay/frameworks/base/core/res/res/values/dimens.xml
@@ -16,8 +16,9 @@
 -->
 <resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
 
-    <dimen name="status_bar_height_portrait">28dp</dimen>
-    <dimen name="status_bar_height_landscape">24dp</dimen>
+    <!-- Height of the status bar -->
+    <dimen name="status_bar_height_portrait">30dp</dimen>
+    <dimen name="status_bar_height_landscape">26dp</dimen>
 
     <!-- Radius of the software rounded corners. -->
      <dimen name="rounded_corner_radius">103px</dimen>
