raphael: disable FOD icon dimming
*Xiaomi's FOD impl. doesn't need fod icon dimming

Signed-off-by: Ayush Dubey <ayushdubey70@gmail.com>

Conflicts:
	overlay/frameworks/base/core/res/res/values/config.xml

--- a/overlay/frameworks/base/core/res/res/values/config.xml
+++ b/overlay/frameworks/base/core/res/res/values/config.xml
@@ -688,4 +688,7 @@
        
     <!-- Flag specifying whether VoLTE TTY is supported -->
     <bool name="config_carrier_volte_tty_supported">true</bool>
+
+    <!-- FOD Icon Dimming -->
+    <bool name="config_targetUsesInKernelDimming">false</bool>
 </resources>
