raphael: disable FOD icon dimming
*Xiaomi's FOD impl. doesn't need fod icon dimming

Signed-off-by: Ayush Dubey <ayushdubey70@gmail.com>

Conflicts:
	overlay/frameworks/base/core/res/res/values/config.xml

--- a/overlay/frameworks/base/core/res/res/values/config.xml
+++ b/overlay/frameworks/base/core/res/res/values/config.xml
@@ -436,5 +436,8 @@
 
     <!--  Maximum number of supported users -->
     <integer name="config_multiuserMaximumUsers">4</integer>
+
+    <!-- FOD Icon Dimming -->
+    <bool name="config_targetUsesInKernelDimming">false</bool>
 </resources>
 
